--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RPR AVM Widget</title>
+  <title>My Vercel Widget Test</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f0f0f0;
+    }
+    a {
+      color: #0070f3;
+      text-decoration: none;
+      font-size: 18px;
     }
   </style>
-  <script>
-    var rprAvmWidgetOptions = {
-      Token: "F4E571BF-8D9C-4929-BBF3-4588AB922D43",
-      Query: "4000 Gulf Terrace Dr, Unit 210, Destin, FL 32541",
-      CoBrandCode: "btswavesoftheemeraldcoast",
-      ShowRprLinks: false
-    }
-  </script>
-  <script src="https://www.narrpr.com/widgets/avm-widget/widget.ashx/script"></script>
 </head>
 <body>
+  <h1>Welcome to My Vercel Deployment</h1>
+  <p>This is the homepage (index.html).</p>
+  <p><a href="rpr-widget.html">Go to the RPR Widget</a></p>
 </body>
 </html>
