--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Vercel Widget Test</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background: #f0f0f0;
-    }
-    a {
-      color: #0070f3;
-      text-decoration: none;
-      font-size: 18px;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=/rpr-widget.html" />
 </head>
 <body>
-  <h1>Welcome to My Vercel Deployment</h1>
-  <p>This is the homepage (index.html).</p>
-  <p><a href="rpr-widget.html">Go to the RPR Widget</a></p>
+  <p>Redirecting to RPR Widget...</p>
 </body>
 </html>
