--- a/rpr-widget.html
+++ b/rpr-widget.html
@@ -3,40 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RPR Widget</title>
+  <title>Custom RPR Search Widget</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
       background: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h2 {
+      margin-bottom: 15px;
+      color: #333;
+    }
+
+    .search-bar {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
+      margin-bottom: 20px;
+      width: 100%;
+      max-width: 600px;
     }
-    #rpr-widget {
+
+    #searchBox {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px 0 0 6px;
+      outline: none;
+    }
+
+    #searchBtn {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      background: #0078d7;
+      color: white;
+      cursor: pointer;
+      border-radius: 0 6px 6px 0;
+      transition: background 0.2s ease;
+    }
+
+    #searchBtn:hover {
+      background: #005fa3;
+    }
+
+    #widgetContainer {
       width: 100%;
       max-width: 900px;
       min-height: 600px;
       background: #fff;
       border: 1px solid #ccc;
+      border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <div id="rpr-widget"></div>
+  <h2>Find Your Home Value</h2>
+  <div class="search-bar">
+    <input id="searchBox" type="text" placeholder="Enter property address..." />
+    <button id="searchBtn">Search</button>
+  </div>
+
+  <div id="widgetContainer"></div>
 
   <script>
-    // 🔑 Widget options - no Query so RPR shows its search input
-    window.rprAvmWidgetOptions = {
-      Token: "F4E571BF-8D9C-4929-BBF3-4588AB922D43",
-      CoBrandCode: "btswavesoftheemeraldcoast",
-      ShowRprLinks: false
-    };
-  </script>
+    function loadWidget(query) {
+      // Clear old widget
+      document.getElementById("widgetContainer").innerHTML = "";
 
-  <!-- Load RPR Widget script -->
-  <script src="https://www.narrpr.com/widgets/avm-widget/widget.ashx"></script>
+      // Set widget options
+      window.rprAvmWidgetOptions = {
+        Token: "F4E571BF-8D9C-4929-BBF3-4588AB922D43",
+        Query: query,
+        CoBrandCode: "btswavesoftheemeraldcoast",
+        ShowRprLinks: false
+      };
+
+      // Load widget script
+      const script = document.createElement("script");
+      script.src = "https://www.narrpr.com/widgets/avm-widget/widget.ashx/script";
+      script.async = true;
+      document.getElementById("widgetContainer").appendChild(script);
+    }
+
+    // Default property on first load (optional)
+    loadWidget("4000 Gulf Terrace Dr, Unit 210, Destin, FL 32541");
+
+    // Handle search button
+    document.getElementById("searchBtn").addEventListener("click", () => {
+      const addr = document.getElementById("searchBox").value;
+      if (addr) loadWidget(addr);
+    });
+
+    // Handle enter key press
+    document.getElementById("searchBox").addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        const addr = e.target.value;
+        if (addr) loadWidget(addr);
+      }
+    });
+  </script>
 </body>
 </html>
