--- a/rpr-widget.html
+++ b/rpr-widget.html
@@ -20,15 +20,13 @@
     document.getElementById("debug").textContent = JSON.stringify(debugInfo, null, 2);
   </script>
 
-  <script>
-    // Now load the widget
-    window.rprAvmWidgetOptions = {
-      Token: "F4E571BF-8D9C-4929-BBF3-4588AB922D43",
-      Query: "4000 Gulf Terrace Dr, Unit 210, Destin, FL 32541",
-      CoBrandCode: "btswavesoftheemeraldcoast",
-      ShowRprLinks: false
-    };
-  </script>
-  <script src="https://www.narrpr.com/widgets/avm-widget/widget.ashx/script"></script>
+  <h2>RPR AVM Search Widget</h2>
+  <div id="rpr-widget-container" style="width: 100%; max-width: 600px; height: 600px; border: 1px solid #ccc;">
+    <iframe 
+      src="https://www.narrpr.com/widgets/avm-widget/default.aspx?CoBrandCode=btswavesoftheemeraldcoast&ShowRprLinks=false" 
+      style="width:100%; height:100%; border:none;" 
+      title="RPR AVM Search Widget">
+    </iframe>
+  </div>
 </body>
 </html>
