--- a/rpr-widget.html
+++ b/rpr-widget.html
@@ -23,7 +23,7 @@
   <h2>RPR AVM Search Widget</h2>
   <div id="rpr-widget-container" style="width: 100%; max-width: 600px; height: 600px; border: 1px solid #ccc;">
     <iframe 
-      src="https://www.narrpr.com/widgets/avm-widget/default.aspx?CoBrandCode=btswavesoftheemeraldcoast&ShowRprLinks=false" 
+      src="https://www.narrpr.com/widgets/avm-widget/default.aspx?CoBrandCode=btswavesoftheemeraldcoast&ShowRprLinks=false&Token=F4E571BF-8D9C-4929-BBF3-4588AB922D43" 
       style="width:100%; height:100%; border:none;" 
       title="RPR AVM Search Widget">
     </iframe>
