--- a/rpr-widget.html
+++ b/rpr-widget.html
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>RPR Widget Debug</title>
-</head>
-<body>
-  <h1>RPR Widget Debug</h1>
-  <pre id="debug"></pre>
+<div id="custom-rpr-widget" style="max-width:600px;">
+  <h2>Search Property</h2>
+  <form id="rpr-search-form">
+    <input type="text" id="address" placeholder="Enter address" style="width:100%; padding:8px;" />
+    <button type="submit" style="margin-top:8px; padding:8px 12px;">Search</button>
+  </form>
+  <div id="search-results" style="margin-top:12px;"></div>
+</div>
 
-  <script>
-    // Log what domain the browser is using
-    const debugInfo = {
-      hostname: window.location.hostname,
-      href: window.location.href,
-      referrer: document.referrer,
-      userAgent: navigator.userAgent
-    };
-    console.log("DEBUG INFO:", debugInfo);
-    document.getElementById("debug").textContent = JSON.stringify(debugInfo, null, 2);
-  </script>
+<script>
+const token = "F4E571BF-8D9C-4929-BBF3-4588AB922D43";
 
-  <h2>RPR AVM Search Widget</h2>
-  <div id="rpr-widget-container" style="width: 100%; max-width: 600px; height: 600px; border: 1px solid #ccc;">
-    <iframe 
-      src="https://www.narrpr.com/widgets/avm-widget/default.aspx?CoBrandCode=btswavesoftheemeraldcoast&ShowRprLinks=false&Token=F4E571BF-8D9C-4929-BBF3-4588AB922D43" 
-      style="width:100%; height:100%; border:none;" 
-      title="RPR AVM Search Widget">
-    </iframe>
-  </div>
-</body>
-</html>
+document.getElementById("rpr-search-form").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const address = document.getElementById("address").value;
+  const resultsDiv = document.getElementById("search-results");
+  
+  resultsDiv.textContent = "Searching...";
+
+  try {
+    // Example API call - replace with actual RPR endpoint
+    const response = await fetch(`https://api.narrpr.com/avm?address=${encodeURIComponent(address)}&token=${token}`);
+    const data = await response.json();
+    
+    resultsDiv.textContent = JSON.stringify(data, null, 2);
+  } catch (err) {
+    resultsDiv.textContent = "Error fetching data";
+    console.error(err);
+  }
+});
+</script>
