--- a/rpr-widget.html
+++ b/rpr-widget.html
@@ -4,24 +4,21 @@
     <input type="text" id="address" placeholder="Enter address" style="width:100%; padding:8px;" />
     <button type="submit" style="margin-top:8px; padding:8px 12px;">Search</button>
   </form>
-  <div id="search-results" style="margin-top:12px;"></div>
+  <div id="search-results" style="margin-top:12px; white-space: pre-wrap;"></div>
 </div>
 
 <script>
-const token = "F4E571BF-8D9C-4929-BBF3-4588AB922D43";
-
 document.getElementById("rpr-search-form").addEventListener("submit", async (e) => {
   e.preventDefault();
   const address = document.getElementById("address").value;
   const resultsDiv = document.getElementById("search-results");
-  
+
   resultsDiv.textContent = "Searching...";
 
   try {
-    // Example API call - replace with actual RPR endpoint
-    const response = await fetch(`https://api.narrpr.com/avm?address=${encodeURIComponent(address)}&token=${token}`);
+    const response = await fetch(`/api/search?address=${encodeURIComponent(address)}`);
     const data = await response.json();
-    
+
     resultsDiv.textContent = JSON.stringify(data, null, 2);
   } catch (err) {
     resultsDiv.textContent = "Error fetching data";
